fixed almost every validation including whitespace

--- a/react-app/src/styles/EventDetail.css
+++ b/react-app/src/styles/EventDetail.css
@@ -40,7 +40,7 @@
     display: flex;
     justify-content: flex-start;
     /* margin-left: 10px; */
-    font-size: 48px;
+    font-size: 36px;
     /* position: absolute; */
     letter-spacing: -0.4px;
     text-shadow: 5px black;
