--- a/react-app/src/styles/Footer.css
+++ b/react-app/src/styles/Footer.css
@@ -5,7 +5,7 @@
   position: relative;
   bottom: 0;
   width: 100%;
-  height: 150px;
+  height: 60px;
   margin-top: 20px;
   background-color: white;
   color: rgb(0, 0, 0);
