--- a/react-app/src/styles/HomePage.css
+++ b/react-app/src/styles/HomePage.css
@@ -85,4 +85,5 @@ img {
 .page-content-wrapper {
     display: flex;
     justify-content: center;
+    margin-bottom: 100px;
 }
